--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "vant": "^2.6.1",
     "vue-baidu-map": "^0.21.22",
     "vue-cookies": "^1.7.0",
-    "vue-monoplasty-slide-verify": "^1.1.2"
+    "vue-monoplasty-slide-verify": "^1.1.2",
+    "weixin-js-sdk": "^1.6.0"
   },
   "devDependencies": {
     "@nuxtjs/axios": "^5.9.7",
