--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "@nuxtjs/proxy": "^1.3.3",
     "core-js": "^3.6.5",
     "regenerator-runtime": "^0.13.5",
-    "swiper": "^5.3.7"
+    "swiper": "^5.3.7",
+    "vue-lazyload": "^1.3.3"
   },
   "config": {
     "nuxt": {
