--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@nuxtjs/component-cache": "^1.1.5",
     "axios": "^0.19.2",
     "babel-loader": "^8.1.0",
+    "babel-plugin-import": "^1.13.1",
     "echarts": "^4.7.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "moment": "^2.24.0",
     "nuxt": "^2.0.0",
     "reconnecting-websocket": "^4.4.0",
-    "vant": "^2.6.1",
+    "vant": "^2.10.11",
     "vue-baidu-map": "^0.21.22",
     "vue-cookies": "^1.7.0",
     "vue-monoplasty-slide-verify": "^1.1.2",
